# lz78_rust

./: .gitignore  Cargo.toml  Genomic_denoising.ipynb  README.md  action_potential_denoising.ipynb  chwoon_requirements.txt  lz78_denoiser.ipynb  lz78_python_interface_tutorial.ipynb  pyproject.toml
crates/experiments/: Cargo.toml
crates/experiments/src/: argparse.rs  causal_processing.rs  classify.rs  compression_via_lz78_source.rs  data.rs  generate.rs  lib.rs  signals.rs  spa_ablation_utils.rs  train.rs  utils.rs
crates/lz78/: Cargo.toml
crates/lz78/src/: block_encoder.rs  classification.rs  encoder.rs  generation.rs  lib.rs  prob_source.rs  sequence.rs  source.rs  spa.rs  storage.rs  tree.rs  util.rs
crates/lz78/src/compression/: block_encoder.rs  encoder.rs  lzw.rs  mod.rs
crates/lz78/src/old_spa/: causally_processed.rs  mod.rs  states.rs
crates/lz78/src/spa/: basic_spas.rs  causally_processed.rs  config.rs  ctw.rs  dirichlet.rs  generation.rs  lz78.pyi  lz_transform.rs  lzw_tree.rs  mod.rs  ngram.rs  params.rs  states.rs  util.rs
crates/python/: Cargo.toml  lz78.pyi  pyproject.toml
crates/python/src/: classifier.rs  encoder.rs  lib.rs  markov.rs  ngram_spa.rs  prob_source.rs  sequence.rs  source.rs  spa.rs
mert_cvx_nn/mosek_nn/: convex_nn.py
mert_cvx_nn/mosek_nn/data/Boston/: Xtest.txt  Xtrain.txt  Ytest.txt  Ytrain.txt
mteb_info/: classification_problems.json  tasks.txt
notebooks/: EmbeddingModels.ipynb
python_experiments/: ReLU_nn_embedding.ipynb  comparison_with_chwoong_lz.ipynb  compute_ngram_subspace.py  convex_nn_embedding.ipynb  debug_lz.ipynb  embeddings.ipynb  evaluate_model.py  ngram_embeddings.ipynb  pg19_experiment.ipynb  pg19_experiment.py  source_experiment.ipynb  train_spa.py
python_experiments/old/: comparison_with_chwoong_lz.ipynb  source_experiment.ipynb
scripts/: evaluate_model.py  run_generate.sh  run_train.sh  train_model.py
shell_scripts/: eval_relu_model.sh  train_lz_model.sh  train_ngram_model.sh  train_ngram_model_no_pca.sh  train_relu_model.sh
src/lz_embed/: classical.py  test.ipynb  transformer_based.py  utils.py
src/lz_embed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lz_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/relu_embed/: classification.py  data.py  embedding.py  utils.py
tutorials/: CompressorTutorial.ipynb  LZEmbeddings.ipynb  ProbabilitySourceTutorial.ipynb  README.md  SPACodeStructure.md  SPATutorial.ipynb  Sequences.ipynb  utils.py
