[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lz_tools"
version = "0.0.1"
description = "LZ78 Document Embedding"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch >= 2.6.0",
    "torchvision >= 0.21.0",
    "numpy >= 1.26.4",
    "transformers >= 4.48.1",
    "datasets >= 3.2.0",
    "tensorflow-datasets >= 4.9.7",
    "tqdm >= 4.67.1",
    "mteb >= 1.36",
    "tf-keras >= 2.19",
    "openai >= 1.72",
]

[tool.setuptools.packages.find]
where = ["src"]