[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lz_tools"
version = "0.0.1"
description = "LZ78 Document Embedding"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch >= 2.6.0",
    "torchvision >= 0.21.0",
    "numpy < 2",
    "transformers >= 4.17.1",
    "datasets >= 2.21.0",
    "mteb >= 1.36",
    "openai >= 1.71.0",
    "datatrove == 0.3.0",
    "matplotlib == 3.10.1",
]

[tool.setuptools.packages.find]
where = ["src"]