[package]
name = "lz78-rust"
edition = "2021"
version = "0.1.0"

[dependencies]

anyhow.workspace = true
rand.workspace = true
itertools.workspace = true
bitvec.workspace = true
bytes.workspace = true
rayon.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
ordered-float.workspace = true
hashbrown.workspace = true