[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "lz78"
requires-python = ">=3.7"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]